@@ -179,8 +179,12 @@ else {
 				print_image ("images/config.png", true, array ("title" => __('Builder alert'))) .'</a>'));
 	
 	$buttons[$tab]['active'] = true;
-				
-	print_page_header(__('Alerts') . ' &raquo; ' . __('Manage alerts') . ' &raquo; ' . __('List'), "images/god2.png", false, "manage_alert_list", true, $buttons);	
+
+	if (isset($_GET["tab"])) {
+		print_page_header(__('Alerts') . ' &raquo; ' . __('Manage alerts') . ' &raquo; ' . __('Create'), "images/god2.png", false, "manage_alert_list", true, $buttons);
+	} else {
+		print_page_header(__('Alerts') . ' &raquo; ' . __('Manage alerts') . ' &raquo; ' . __('List'), "images/god2.png", false, "manage_alert_list", true, $buttons);
+	}			
 	
 	echo $messageAction;
 	
